--- a/PongGame/app/src/main/res/values/strings.xml
+++ b/PongGame/app/src/main/res/values/strings.xml
@@ -13,8 +13,8 @@
     <string name="login_failed">"Login failed"</string>
 
     <string name="state">Ready</string>
-    <string name="mode_win">You Won</string>
-    <string name="mode_loss">You Loss</string>
+    <string name="mode_win">You Won!</string>
+    <string name="mode_loss">You Loss!</string>
     <string name="mode_paused">Paused</string>
     <string name="title_activity_game">GameActivity</string>
     <!-- Strings used for fragments for navigation -->
